Fix contact visibility on mobiles

--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ text-decoration: none;
 
 .contact {
   margin: 1.5rem auto;
-  padding-top: 2rem;
+  padding-top: 3rem;
 }
 
 .btn-outline-primary {
